<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/profile">

    <fragment
        android:id="@+id/profile"
        android:name="ru.netology.nework.ui.UserProfileFragment"
        android:label="@string/my_profile" />

    <fragment
        android:id="@+id/list_post"
        android:name="ru.netology.nework.ui.PostsFragment"
        android:label="@string/list_of_post"
        tools:layout="@layout/fragment_posts">
        <action
            android:id="@+id/action_list_post_to_newPostFragment"
            app:destination="@id/newPostFragment" />

    </fragment>

    <fragment
        android:id="@+id/newPostFragment"
        android:name="ru.netology.nework.ui.NewPostFragment"
        android:label="fragment_new_post"
        tools:layout="@layout/fragment_new_post" />

    <fragment
        android:id="@+id/events"
        android:name="ru.netology.nework.ui.EventsFragment"
        android:label="@string/events_for_people"
        tools:layout="@layout/fragment_events" />



    <fragment
        android:id="@+id/list_of_users"
        android:name="ru.netology.nework.ui.UsersFragment"
        android:label="@string/list_of_users" />




</navigation>